[gd_scene load_steps=12 format=4 uid="uid://b0oss4o1mxsog"]

[ext_resource type="Script" path="res://Scripts/level_1.gd" id="1_ny7pf"]
[ext_resource type="PackedScene" uid="uid://bksjrj7hes8sr" path="res://Escenas/Player1.tscn" id="2_tvtsa"]
[ext_resource type="PackedScene" uid="uid://bd8las8h015ea" path="res://Escenas/Player2.tscn" id="3_lwudt"]
[ext_resource type="PackedScene" uid="uid://cspotaxs3tijl" path="res://Escenas/Player3.tscn" id="4_7oiuk"]
[ext_resource type="Texture2D" uid="uid://rhnnhdm8jeja" path="res://Assets/Tiles/thingsv2.png" id="5_n7sle"]
[ext_resource type="Texture2D" uid="uid://bymqltgu7irwg" path="res://Assets/Parallax/layer 1.png" id="6_2nesn"]
[ext_resource type="Texture2D" uid="uid://m11fatl0d3hp" path="res://Assets/Parallax/layer 2.png" id="7_leact"]
[ext_resource type="Texture2D" uid="uid://i67suitqynam" path="res://Assets/Parallax/layer 4.png" id="8_yfjcc"]
[ext_resource type="Texture2D" uid="uid://5nxa4cskuuqf" path="res://Assets/Parallax/layer 5.png" id="9_e8ihg"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gssj4"]
texture = ExtResource("5_n7sle")
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:9/0 = 0
1:10/0 = 0
2:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
6:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
14:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
13:11/0 = 0
5:14/0 = 0
5:15/0 = 0
0:4/size_in_atlas = Vector2i(4, 1)
0:4/0 = 0
0:5/size_in_atlas = Vector2i(4, 1)
0:5/0 = 0
0:6/size_in_atlas = Vector2i(4, 1)
0:6/0 = 0
0:7/size_in_atlas = Vector2i(4, 1)
0:7/0 = 0
1:8/size_in_atlas = Vector2i(2, 1)
1:8/0 = 0
6:8/size_in_atlas = Vector2i(2, 1)
6:8/0 = 0
6:7/size_in_atlas = Vector2i(2, 1)
6:7/0 = 0
5:6/size_in_atlas = Vector2i(4, 1)
5:6/0 = 0
5:5/size_in_atlas = Vector2i(4, 1)
5:5/0 = 0
5:4/size_in_atlas = Vector2i(4, 1)
5:4/0 = 0
5:3/size_in_atlas = Vector2i(4, 1)
5:3/0 = 0
5:2/size_in_atlas = Vector2i(4, 1)
5:2/0 = 0
5:1/size_in_atlas = Vector2i(4, 1)
5:1/0 = 0
5:0/size_in_atlas = Vector2i(4, 1)
5:0/0 = 0
11:4/size_in_atlas = Vector2i(2, 1)
11:4/0 = 0
9:5/size_in_atlas = Vector2i(6, 1)
9:5/0 = 0
9:6/size_in_atlas = Vector2i(6, 1)
9:6/0 = 0
9:7/size_in_atlas = Vector2i(6, 1)
9:7/0 = 0
11:8/size_in_atlas = Vector2i(2, 1)
11:8/0 = 0

[sub_resource type="TileSet" id="TileSet_7gmcj"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_gssj4")

[node name="Level1" type="Node2D"]
script = ExtResource("1_ny7pf")

[node name="TileMap" type="Node2D" parent="."]

[node name="Layer0" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAA8AAAABAAMAAAABAA8AAAABAAMAAAACAA8AAAABAAMAAAADAA8AAAABAAMAAAAEAA8AAAABAAMAAAAFAA8AAAABAAMAAAAGAA8AAAABAAMAAAAHAA8AAAABAAMAAAAIAA8AAAABAAMAAAAJAA8AAAABAAMAAAAKAA8AAAABAAMAAAALAA8AAAABAAMAAAAMAA8AAAABAAMAAAANAA8AAAABAAMAAAAOAA8AAAABAAMAAAAPAA8AAAABAAMAAAAQAA8AAAABAAMAAAARAA8AAAABAAMAAAASAA8AAAABAAMAAAATAA8AAAABAAMAAAAUAA8AAAABAAMAAAAVAA8AAAABAAMAAAAWAA8AAAABAAMAAAAXAA8AAAABAAMAAAAYAA8AAAABAAMAAAAZAA8AAAABAAMAAAAaAA8AAAABAAMAAAAbAA8AAAABAAMAAAAcAA8AAAABAAMAAAAdAA8AAAABAAMAAAAeAA8AAAABAAMAAAAfAA8AAAABAAMAAAAgAA8AAAABAAMAAAAhAA8AAAABAAMAAAAiAA8AAAABAAMAAAAAAA4AAAABAAIAAAABAA4AAAABAAIAAAACAA4AAAABAAIAAAADAA4AAAABAAIAAAAFAA4AAAABAAIAAAAGAA4AAAABAAIAAAAHAA4AAAABAAIAAAAIAA4AAAABAAIAAAAJAA4AAAABAAIAAAAKAA4AAAABAAIAAAALAA4AAAABAAIAAAAMAA4AAAABAAgAAAANAA4AAAABAAIAAAAOAA4AAAABAAIAAAAPAA4AAAABAAIAAAAQAA4AAAABAAIAAAARAA4AAAABAAIAAAASAA4AAAABAAIAAAATAA4AAAABAAIAAAAUAA4AAAABAAIAAAAVAA4AAAAGAAgAAAAWAA4AAAABAAIAAAAXAA4AAAABAAIAAAAYAA4AAAABAAIAAAAZAA4AAAABAAIAAAAaAA4AAAABAAIAAAAeAA4AAAABAAIAAAAfAA4AAAABAAIAAAAgAA4AAAABAAIAAAAhAA4AAAABAAIAAAAiAA4AAAALAAgAAAAAAAwAAAAEAA4AAAAEAA4AAAALAAgAAAAEAA0AAAAJAAcAAAAEAAwAAAAJAAYAAAAEAAsAAAAJAAUAAAAEAAoAAAALAAQAAAAVAA0AAAAGAAcAAAAVAAwAAAAFAAYAAAAVAAoAAAAFAAQAAAAVAAsAAAAFAAUAAAAVAAgAAAAFAAIAAAAVAAkAAAAFAAMAAAAjAA8AAAABAAMAAAAkAA8AAAABAAMAAAAlAA8AAAABAAMAAAAmAA8AAAABAAMAAAAnAA8AAAABAAMAAAAoAA8AAAABAAMAAAApAA8AAAABAAMAAAAqAA8AAAABAAMAAAArAA8AAAABAAMAAAAsAA8AAAABAAMAAAAtAA8AAAABAAMAAAAuAA8AAAABAAMAAAAvAA8AAAABAAMAAAAwAA8AAAABAAMAAAAxAA8AAAABAAMAAAAyAA8AAAABAAMAAAAzAA8AAAABAAMAAAA0AA8AAAABAAMAAAA1AA8AAAABAAMAAAA2AA8AAAABAAMAAAA3AA8AAAABAAMAAAAjAA4AAAABAAIAAAAkAA4AAAABAAIAAAAlAA4AAAABAAIAAAAmAA4AAAABAAIAAAAnAA4AAAABAAIAAAAoAA4AAAABAAIAAAApAA4AAAABAAIAAAAqAA4AAAABAAIAAAArAA4AAAABAAIAAAAsAA4AAAABAAIAAAAtAA4AAAABAAIAAAAuAA4AAAABAAIAAAAvAA4AAAABAAIAAAAwAA4AAAABAAIAAAAxAA4AAAABAAIAAAAyAA4AAAABAAIAAAAzAA4AAAABAAIAAAA0AA4AAAABAAIAAAA1AA4AAAABAAIAAAA2AA4AAAABAAIAAAA3AA4AAAABAAIAAAAcAA4AAAABAAgAAAAcAA0AAAAAAAcAAAAcAAwAAAAAAAYAAAAcAAsAAAAAAAUAAAAcAAoAAAAAAAQAAAAAABAAAAABAAMAAAAAABEAAAABAAMAAAABABEAAAABAAMAAAABABAAAAABAAMAAAACABAAAAABAAMAAAADABAAAAABAAMAAAAEABAAAAABAAMAAAAFABAAAAABAAMAAAAGABAAAAABAAMAAAAHABAAAAABAAMAAAAIABAAAAABAAMAAAAJABAAAAABAAMAAAAKABAAAAABAAMAAAALABAAAAABAAMAAAAMABAAAAABAAMAAAANABAAAAABAAMAAAAOABAAAAABAAMAAAAPABAAAAABAAMAAAAQABAAAAABAAMAAAARABAAAAABAAMAAAASABAAAAABAAMAAAATABAAAAABAAMAAAAUABAAAAABAAMAAAAVABAAAAABAAMAAAAWABAAAAABAAMAAAAXABAAAAABAAMAAAAYABAAAAABAAMAAAAZABAAAAABAAMAAAAaABAAAAABAAMAAAAbABAAAAABAAMAAAAcABAAAAABAAMAAAAdABAAAAABAAMAAAAeABAAAAABAAMAAAACABEAAAABAAMAAAADABEAAAABAAMAAAAEABEAAAABAAMAAAAFABEAAAABAAMAAAAGABEAAAABAAMAAAAHABEAAAABAAMAAAAIABEAAAABAAMAAAAJABEAAAABAAMAAAAKABEAAAABAAMAAAALABEAAAABAAMAAAAMABEAAAABAAMAAAANABEAAAABAAMAAAAOABEAAAABAAMAAAAPABEAAAABAAMAAAAQABEAAAABAAMAAAARABEAAAABAAMAAAASABEAAAABAAMAAAATABEAAAABAAMAAAAUABEAAAABAAMAAAAVABEAAAABAAMAAAAWABEAAAABAAMAAAAXABEAAAABAAMAAAAYABEAAAABAAMAAAAZABEAAAABAAMAAAAaABEAAAABAAMAAAAbABEAAAABAAMAAAAcABEAAAABAAMAAAAdABEAAAABAAMAAAAeABEAAAABAAMAAAAfABAAAAABAAMAAAAgABAAAAABAAMAAAAhABAAAAABAAMAAAAiABAAAAABAAMAAAAjABAAAAABAAMAAAAkABAAAAABAAMAAAAlABAAAAABAAMAAAAmABAAAAABAAMAAAAnABAAAAABAAMAAAAoABAAAAABAAMAAAApABAAAAABAAMAAAAqABAAAAABAAMAAAArABAAAAABAAMAAAAsABAAAAABAAMAAAAtABAAAAABAAMAAAAuABAAAAABAAMAAAAvABAAAAABAAMAAAAwABAAAAABAAMAAAAxABAAAAABAAMAAAAyABAAAAABAAMAAAAzABAAAAABAAMAAAA0ABAAAAABAAMAAAA1ABAAAAABAAMAAAA2ABAAAAABAAMAAAA3ABAAAAABAAMAAAA3ABEAAAABAAMAAAA2ABEAAAABAAMAAAA1ABEAAAABAAMAAAA0ABEAAAABAAMAAAAzABEAAAABAAMAAAAyABEAAAABAAMAAAAxABEAAAABAAMAAAAwABEAAAABAAMAAAAvABEAAAABAAMAAAAuABEAAAABAAMAAAAtABEAAAABAAMAAAAsABEAAAABAAMAAAArABEAAAABAAMAAAAqABEAAAABAAMAAAApABEAAAABAAMAAAAoABEAAAABAAMAAAAnABEAAAABAAMAAAAmABEAAAABAAMAAAAlABEAAAABAAMAAAAkABEAAAABAAMAAAAjABEAAAABAAMAAAAiABEAAAABAAMAAAAhABEAAAABAAMAAAAgABEAAAABAAMAAAAfABEAAAABAAMAAAAMAA0AAAAFAAYAAAAMAAwAAAAFAAUAAAAMAAsAAAAAAAUAAAAMAAoAAAAAAAQAAAAiAAsAAAAJAAUAAAAiAAwAAAAJAAYAAAAiAA0AAAAJAAcAAAAiAAoAAAALAAQAAAA4AA8AAAABAAMAAAA5AA8AAAABAAMAAAA6AA8AAAABAAMAAAA7AA8AAAABAAMAAAA8AA8AAAABAAMAAAA9AA8AAAABAAMAAAA+AA8AAAABAAMAAAA/AA8AAAABAAMAAABAAA8AAAABAAMAAABBAA8AAAABAAMAAABCAA8AAAABAAMAAABDAA8AAAABAAMAAABEAA8AAAABAAMAAABFAA8AAAABAAMAAABGAA8AAAABAAMAAABHAA8AAAABAAMAAABIAA8AAAABAAMAAABJAA8AAAABAAMAAABKAA8AAAABAAMAAABLAA8AAAABAAMAAABMAA8AAAABAAMAAABNAA8AAAABAAMAAABOAA8AAAABAAMAAABPAA8AAAABAAMAAABQAA8AAAABAAMAAABRAA8AAAABAAMAAABSAA8AAAABAAMAAABTAA8AAAABAAMAAABUAA8AAAABAAMAAABVAA8AAAABAAMAAABWAA8AAAABAAMAAABXAA8AAAABAAMAAABYAA8AAAABAAMAAABZAA8AAAABAAMAAABaAA8AAAABAAMAAABbAA8AAAABAAMAAABcAA8AAAABAAMAAABdAA8AAAABAAMAAABeAA8AAAABAAMAAABfAA8AAAABAAMAAABgAA8AAAABAAMAAABhAA8AAAABAAMAAABiAA8AAAABAAMAAABjAA8AAAABAAMAAABkAA8AAAABAAMAAABlAA8AAAABAAMAAABmAA8AAAABAAMAAABmAA4AAAABAAMAAABnAA4AAAABAAMAAABoAA4AAAABAAMAAABKAA4AAAABAAMAAABKAA0AAAABAAMAAABLAA0AAAABAAMAAABMAA0AAAABAAMAAABNAA4AAAABAAMAAABMAA4AAAABAAMAAABLAA4AAAABAAMAAABaAA4AAAABAAMAAABaAA0AAAABAAMAAABZAA4AAAABAAMAAABYAA4AAAABAAMAAABpAA8AAAABAAMAAABqAA8AAAABAAMAAABrAA8AAAABAAMAAABsAA8AAAABAAMAAABtAA8AAAABAAMAAABuAA8AAAABAAMAAABvAA8AAAABAAMAAABwAA8AAAABAAMAAABxAA8AAAABAAMAAAByAA8AAAABAAMAAABzAA8AAAABAAMAAAB0AA8AAAABAAMAAAA=")
tile_set = SubResource("TileSet_7gmcj")

[node name="Player1" parent="." instance=ExtResource("2_tvtsa")]
position = Vector2(246, 132)

[node name="Camera2D" type="Camera2D" parent="Player1"]
position = Vector2(-36, 38)
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_bottom = 280
position_smoothing_enabled = true

[node name="Player2" parent="." instance=ExtResource("3_lwudt")]
position = Vector2(316, 148)

[node name="Player3" parent="." instance=ExtResource("4_7oiuk")]
position = Vector2(167, 140)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
texture_filter = 1
motion_mirroring = Vector2(400, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Background"]
position = Vector2(1.52588e-05, 3.05176e-05)
scale = Vector2(1.5075, 1.49479)
texture = ExtResource("6_2nesn")
centered = false

[node name="Moon" type="ParallaxLayer" parent="ParallaxBackground"]
texture_filter = 1
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Moon"]
scale = Vector2(0.8275, 0.796875)
texture = ExtResource("7_leact")
centered = false

[node name="CityFar" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.7, 0.7)
motion_mirroring = Vector2(800, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/CityFar"]
position = Vector2(0, 50)
texture = ExtResource("8_yfjcc")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 400, 192)

[node name="CityFar2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.7, 0.7)
motion_mirroring = Vector2(400, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/CityFar2"]
position = Vector2(0, 50)
texture = ExtResource("8_yfjcc")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 400, 192)

[node name="CityClose" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(400, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/CityClose"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_e8ihg")
centered = false
